<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="328dp"
    android:layout_height="204dp"
    android:background="@drawable/dialogue_bg">



    <TextView

        android:id="@+id/tv1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0F1828"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv2"
        android:text="@string/Delete"/>
    <TextView
        android:id="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textColor="#A4A4A4"
        android:textSize="16sp"
        android:text="@string/Areyousureyouwanttodeletethislog"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cancel_tv"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.35"
        android:layout_height="0dp"
        android:fontFamily="@font/mulish_bold"
        app:layout_constraintHeight_percent="0.2"
        android:text="@string/Cancel"
        android:textColor="@color/dark_blue"
        android:background="@drawable/unlock_btn"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"/>
    <TextView
        android:id="@+id/delete_tv"
        android:text="@string/Delete"
        android:gravity="center"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:fontFamily="@font/mulish_bold"
        android:background="@drawable/lock_btn"
        app:layout_constraintWidth_percent="0.35"
        android:layout_height="0dp"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"/>

</androidx.constraintlayout.widget.ConstraintLayout>